--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "express": "^4.17.1",
     "twilio": "^3.39.4"
   },
+  "scripts": {
+        "build": "node index.js",
+        "start": "node index.js",
+        "test": "standard"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
