--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "twilio": "^3.39.4"
   },
   "scripts": {
-        "start": "node index.js"
+    "start": "node index.js"
   },
   "devDependencies": {},
   "author": "",
